<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>theimc</name>
  <version>7.0.0</version>
  <description>ROS2 Humble Packages</description>
  <maintainer email="jeff@todo.com">erail</maintainer>
  <license>Apache 2.0</license>
  <author email="jeff@todo.com">Leo Cho</author>  

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>theimc_bringup</depend>
  <depend>theimc_description</depend>
  <depend>theimc_cartographer</depend>
  <depend>theimc_navigation2</depend>
  <depend>theimc_teleop</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

