<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>theimc_description</name>
  <version>7.0.0</version>
  <description>ROS2 Humble Packages</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>
  <author email="jeff@todo.com">Leo Cho</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

